<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="horizontal">

	<Button
		android:id="@+id/letter_practice_erase_button"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="1"
		android:layout_gravity="center"
		android:gravity="center"
		android:text="@string/letter_erase_btn_lbl"
		android:textColor="@android:color/black"
		android:textSize="30sp" />

	<Button
		android:id="@+id/letter_practice_check_accuracy_button"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="1"
		android:layout_gravity="center"
		android:gravity="center"
		android:text="@string/letter_practice_check_accuracy_btn_lbl"
		android:textColor="@android:color/black"
		android:textSize="20sp" />

	<Button
		android:id="@+id/letter_practice_free_draw_button"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="1"
		android:layout_gravity="center"
		android:gravity="center"
		android:text="@string/letter_practice_free_draw_btn_lbl"
		android:textColor="@android:color/black"
		android:textSize="20sp" />

	<Button
		android:id="@+id/letter_practice_trace_button"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="1"
		android:layout_gravity="center"
		android:gravity="center"
		android:text="@string/letter_practice_trace_btn_lbl"
		android:textColor="@android:color/black"
		android:textSize="20sp" />

	<Button
		android:id="@+id/letter_practice_continue_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="90dp"
		android:gravity="center"
		android:text="@string/letter_continue_btn_lbl"
		android:textColor="@android:color/black"
		android:textSize="30sp" />

</LinearLayout>