<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:padding="10dip"
	android:orientation="vertical">

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="left|top"
		android:gravity="center"
		android:paddingLeft="3dp"
		android:paddingRight="3dp"
		android:paddingTop="3dp"
		android:paddingBottom="40dp"
		android:text="@string/letter_game_back_msg"
		android:textSize="20sp" />

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="horizontal">

		<Button
			android:id="@+id/letter_game_back_abort_btn"
			android:layout_width="wrap_content"
			android:layout_height="fill_parent"
			android:layout_gravity="center_horizontal|bottom"
			android:gravity="center"
			android:text="@string/letter_game_back_abort_btn_lbl"
			android:textColor="@android:color/black"
			android:textSize="24sp" />

		<Button
			android:id="@+id/letter_game_back_continue_btn"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_gravity="center_horizontal|bottom"
			android:gravity="center"
			android:text="@string/letter_game_back_continue_btn_lbl"
			android:textColor="@android:color/black"
			android:textSize="24sp" />

	</LinearLayout>

</LinearLayout>